# CPM_PF

./: CMakeLists.txt  README.md  README2.md  cpmpf_parameters.cpp  cpmpf_parameters.h  flowIO.cpp  flowIO.h  gen_visual_flo.m  globals.h  main.cpp  utils.cpp  utils.h
CPM/: CMakeLists.txt  CPM.cpp  CPM.h  OpticFlowIO.h
CPM_Tip2017Mod/: CMakeLists.txt  CPM.cpp
CPM_Tip2017Mod/include/: ImageIO.h
Mains/: CMakeLists.txt  ImageIOpfm.cpp  cpmpf_parameters.cpp  cpmpf_parameters.h  flow.cpp  flow.h  flowIO.cpp  main.cpp  main_disp.cpp  main_flow.cpp  utils.cpp  utils.h
PFilter/: CMakeLists.txt  MatrixOperations.cpp  MatrixOperations.h  PermeabilityFilter.cpp  PermeabilityFilter.h  computeSpatialPermeability.m
PFilter/variational/: image.c  io.c
Variational_refinement/: CMakeLists.txt  variational.c  variational.h  variational_aux.c  variational_aux.h
testing/HCI/: dataset_reference.txt  run_CPMPF_DISP_Cotton_center_col.sh  run_CPMPF_DISP_Cotton_center_row.sh
testing/Lytro/: dataset_reference.txt  run_CPMPF_DISP_Oceane_center_col.sh  run_CPMPF_DISP_Oceane_center_row.sh
testing/Sintel/: dataset_reference.txt  run_CPMPF_FLOW_1.sh  run_CPMPF_FLOW_2.sh
testing/Stanford/: dataset_reference.txt  run_CPMPF_DISP_LegoKnights_center_col.sh  run_CPMPF_DISP_LegoKnights_center_row.sh
testing/Technicolor/: dataset_reference.txt  run_CPMPF_DISP_Train_col_1.sh  run_CPMPF_DISP_Train_row_1.sh
