CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#SET(PROJ_NAME CPMPF)
PROJECT(CPMPF)
ADD_DEFINITIONS(-DWITH_SSE)

# include(FindOpenMP)
# IF(OPENMP_FOUND)
#   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
# ENDIF(OPENMP_FOUND)

set (CMAKE_CXX_STANDARD 11)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(LAPACK REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)

file(GLOB SOURCES     "*.c" "*.cpp")
file(GLOB headers_hpp "*.hpp")
file(GLOB headers_h   "*.h")
list(APPEND HEADERS ${headers_h} ${headers_hpp})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CPM_SOURCE_DIR}
    ${PFilter_SOURCE_DIR}
    ${OpenCV_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
${OpenMP_CXX_LIBRARIES}
    ${OpenCV_LIBS}
    CPM
    PFilter
)

ADD_SUBDIRECTORY(CPM_Tip2017Mod)
ADD_SUBDIRECTORY(PFilter)
